fix: container overflow

--- a/apps/frontend/styles/globals.scss
+++ b/apps/frontend/styles/globals.scss
@@ -30,7 +30,7 @@ body {
 
 #__next {
   min-height: 100vh;
-  overflow: auto;
+  overflow: hidden;
   display: flex;
   flex-direction: row;
 
